--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ch.zhaw.iwi.gpi</groupId>
-	<artifactId>aacsbservice</artifactId>
+	<artifactId>cas-sd-rest-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
